# yuumi

./: README.md  pyproject.toml
yuumi/: __init__.py  config.py  dataset.py  model.py  tokenizer.py  trainer.py  yuumi.py
