[tool.poetry]
name = "yuumi"
version = "0.1.0"
description = "Personal assistant for your lifetime"
authors = ["Zai <130903099+zaibutcooler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
